# gc-streamlit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dock  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
app/: __init__.py  main.py
app/pages/: about.py
app/static/fonts/: google-sans-flex.css
tests/: __init__.py  test_about.py  test_app.py
thoughts/shared/plans/: 2025-11-20-docker-streamlit-scaffold.md
